axum-macros/tests/debug_handler/fail/not_a_function.rs
use axum_macros::debug_handler;

#[debug_handler]
struct A;

fn main() {}
