axum-macros/tests/debug_handler/fail/not_a_function.stderr
error: expected `fn`
 --> tests/debug_handler/fail/not_a_function.rs:4:1
  |
4 | struct A;
  | ^^^^^^
